service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oms-svc
  namespace: jenkins
  labels:
    app: oms
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: oms
