ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oms-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: oms.tcs.eas.com
      http:
        paths:
          - path: /oms
            pathType: Exact 
            backend:
              service:
                name: oms-svc
                port: 
                  number: 80
